Corregido titulo, favicon. Agregadas liquidaciones de Julio 2019, Junio 2019, Agosto 2019, Enero 2020, Febrero 2020.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularCalculadoraSalarial</title>
+  <title>CalculATE - Trabajadores Civiles de las FF.AA, de Seguridad y del IOSFA</title>
   <base href="https://fcharra.github.io/angularCalculadoraSalarial/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 <link rel="stylesheet" href="styles.e57319edd80b3774ee89.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.e3633a42d1123afc5fc9.js"></script><script type="text/javascript" src="scripts.93df60eb6877ad68bd67.js"></script><script type="text/javascript" src="main.8fb2f6aa96017369985f.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.e3633a42d1123afc5fc9.js"></script><script type="text/javascript" src="scripts.93df60eb6877ad68bd67.js"></script><script type="text/javascript" src="main.ed2e4f0693f8836d38da.js"></script></body>
 </html>
